# peppol-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  as4.py  as4_sender.py  cabundle-prod.pem  cabundle-test.pem  constants.py  exception.py  hashing.py  pyproject.toml  requirements.txt  sender.py  sml.py  smp.py  statistics.py  test.py  validation.py  wsse.py  xmlhelpers.py
.github/workflows/: packaging.yml  tests.yml
certs/: README.md  ap-prod-truststore.pem  ap-test-truststore-g3.pem
sendpeppol-schematron/: peppol-end-user-statistics-reporting-1.1.4.xsl
src/peppol_py/: __init__.py  __main__.py  as4.py  as4_sender.py  sender.py  smp.py  statistics.py  validation.py  wsse.py  xmlhelpers.py
src/peppol_py/data/certs/: ap-prod-truststore-g3.pem  ap-test-truststore-g2-g3.pem
src/peppol_py/data/sendpeppol-schematron/: CEN-EN16931-UBL.xsl  PEPPOL-EN16931-UBL.xsl  peppol-transaction-statistics-reporting-1.0.4.xsl
src/peppol_py/data/xmlsec/: README.md
src/tests/: test_statistics.py  test_statistics_xml.py  test_validation.py
src/tests/data/: credit_note.xml  invoice.xml
xmlsec/: README.md  encryption.xml
xsd/: README.md  ebms-header-3_0-200704.xsd  multiple.xsd
